	incompatibilities between output and split only if split.
	* tp/tests/Makefile.am, tp/tests/reference/, tp/tests/t/: add tests
	for stdout.
	* install-info/tests/Makefile.am (EXTRA_DIST): use 
	the correct file ii-0054-input-info-file.gz.
	* tp/texi2any.pl: put installation directory last in @INC,
	in order to have -I perl arguments take precedence.  Report
	from Aharon Robbins.

2014-05-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.c (process_node_text): Formatting and tweaks to
	carrying character over from one line to another. Return proper
	value.
	* info/t/Init-intera.inc: Use usleep instead of sleep to speed up tests.

2014-05-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.c (process_node_text, info_tag)
	* info/info-utils.c (printed_representation): do_tags argument
	removed.  All callers updated.
	* info/tag.c (handle_tag): Removed.

2014-05-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.c (process_node_text): Don't split printed
	representations like "^X" across lines.

	* info/info-utils.c (printed_representation): Take mbi_iterator_t
	argument and handle Info tags and terminal escape sequences.
	* info/window.c (process_node_text, window_scan_line): Use of
	printed_representation updated.
	* info/window.c (info_tag): No longer static.

2014-05-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.c (process_node_text): First argument changed from
	void * to WINDOW *.  Callers updated.
	* info/display.c (display_node_text):
	* info/window.c (_calc_line_starts): Receive WINDOW * argument.
	* info/window.h (WINDOW): New field line_slots.

	* info/info.h (add_pointer_to_array): Work for integer types.
	* info/info.h (add_element_to_array): Synonym for add_pointer_to_array.

	* info/display.c (struct display_node_closure): Removed.
	* info/window.c (struct calc_closure, calc_closure_expand): Removed.

2014-05-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.h (WINDOW): line_starts changed to pointer to